# FileManager

./: CMakeLists.txt  README.md  colors.c  colors.h  errors.c  errors.h  extensions.c  functions.c  functions.h  main.c  window.c  window.h
